--- a/_posts/2017-04-03-init.md
+++ b/_posts/2017-04-03-init.md
@@ -2,6 +2,11 @@
 layout: post
 title:  "Noverish의 기술블로그 시작합니다!"
 date:   2017-04-03 15:44:46 +0900
+description: Template description
+image: 'https://avatars2.githubusercontent.com/u/19399211?s=460&v=4'
+category: 'template'
+twitter_text: template twitter_text
+introduction: template introduction
 ---
 
 ![profile image]({{ site.url }}/blog/images/profile.jpg)
